[package]
name = "reddit"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
dotenv = "0.15.0"
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_path_to_error = "0.1.16"
thiserror = "1.0.62"
tokio = { version = "1.39.1", features = ["rt-multi-thread"] }
ureq = "2.10.0"
